--- a/playbook/update_gluetun.yml
+++ b/playbook/update_gluetun.yml
@@ -12,13 +12,18 @@
       set_fact:
         gluetun_port: "{{ gluetun_port_output.stdout | regex_search(':(\\d+)', '\\1') }}"
 
+    - name: Save gluetun_port to global fact
+      set_fact:
+        global_gluetun_port: "{{ gluetun_port }}"
+      delegate_to: localhost
+
 - name: Fetch current port from rtorrent.rc for each user and update if necessary
   hosts: seedbox
   gather_facts: false
   tasks:
     - name: Set gluetun_port fact on seedbox
       set_fact:
-        global_gluetun_port: "{{ hostvars['portainer']['gluetun_port'] }}"
+        global_gluetun_port: "{{ hostvars['localhost']['global_gluetun_port'] }}"
 
     - name: Check current port in .rtorrent.rc for user kevin
       command: grep 'port_range = ' /home/kevin/config/rutorrent-kevin/rtorrent/.rtorrent.rc
@@ -81,7 +86,7 @@
   tasks:
     - name: Set gluetun_port fact on portainer
       set_fact:
-        global_gluetun_port: "{{ hostvars['portainer']['gluetun_port'] }}"
+        global_gluetun_port: "{{ hostvars['localhost']['global_gluetun_port'] }}"
 
     - name: Update stack for kevin with new port
       uri:
