--- a/playbook/backup_git.yml
+++ b/playbook/backup_git.yml
@@ -38,12 +38,16 @@
     - name: Changer de répertoire vers le répertoire Git et effectuer les commandes Git
       block:
         - name: Ajouter tous les fichiers modifiés à l'index Git
-          git:
-            repo: "{{ repo_path }}"
-            state: present
-            track: yes
-            name: "backup"
-            commit_msg: "Backup for {{ ansible_date_time.iso8601 }}"
+          command: git add .
+          args:
+            chdir: "{{ repo_path }}"
+
+        - name: Créer un commit avec les modifications
+          command: git commit -m "Backup for {{ ansible_date_time.iso8601 }}"
+          args:
+            chdir: "{{ repo_path }}"
+          register: git_commit
+          failed_when: git_commit.rc != 0 and "nothing to commit" not in git_commit.stderr
 
         - name: Effectuer git push
           command: git push
